--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('spec/code-of-conduct')
+      fetcher: Flatdoc.github('specfm/code-of-conduct')
     });
   </script>
 </head>
@@ -47,8 +47,8 @@
     <div class='left'>
       <h1>Spec Code of Conduct</h1>
       <ul>
-        <li><a href='https://github.com/spec/code-of-conduct'>View on GitHub</a></li>
-        <li><a href='https://github.com/spec/code-of-conduct/issues'>Suggestions</a></li>
+        <li><a href='https://github.com/specfm/code-of-conduct'>View on GitHub</a></li>
+        <li><a href='https://github.com/specfm/code-of-conduct/issues'>Suggestions</a></li>
       </ul>
     </div>
   </div>
